# TTT

./: CMakeLists.txt  README.md  winminimal.hpp
benchmarks/: perf_3x3.txt  perf_4x4.txt
src/: CMakeLists.txt  main.cpp
src/agents/: Agent.hpp  AlphaBetaAgent.cpp  AlphaBetaAgent.hpp  DepthAgent.cpp  DepthAgent.hpp  MinimaxAgent.cpp  MinimaxAgent.hpp  RandomAgent.cpp  RandomAgent.hpp  SearchStats.hpp
src/game/: Board.cpp  Board.hpp  KDetector.cpp  KDetector.hpp  Rules.cpp  Rules.hpp
src/search/: AlphaBeta.cpp  AlphaBeta.hpp  DepthLimited.cpp  DepthLimited.hpp  DepthLimitedResult.hpp  Heuristics.cpp  Heuristics.hpp  Minimax.cpp  Minimax.hpp  MoveOrdering.cpp  MoveOrdering.hpp
src/ui/cli/: CLI.cpp  CLI.hpp
tests/: CMakeLists.txt  test_ab_equivalence.cpp  test_determinism.cpp  test_heuristics.cpp  test_kdetector.cpp  test_minimax.cpp  test_rules.cpp
